# kodi-ibroadcast

./: .gitignore  README.md  addons.xml  addons.xml.md5  index.html
.github/scripts/: build_repo.py
.github/workflows/: kodi-repo.yml
plugin.audio.ibroadcast/: CHANGELOG.md  README.md  addon.xml  default.py  index.html
plugin.audio.ibroadcast/lib/: ibroadcast.py  metadata.py
plugin.audio.ibroadcast/resources/: settings.xml
plugin.audio.ibroadcast/resources/language/resource.language.en_gb/: strings.po
plugin.repository.chivancom/: addon.xml
plugin.repository.ibroadcast/: addon.xml
plugin.visualization.albumart/: CMakeLists.txt  README.md  addon.xml  build.sh
plugin.visualization.albumart/resources/: settings.xml
plugin.visualization.albumart/resources/language/resource.language.en_gb/: strings.po
plugin.visualization.albumart/src/: main.cpp
script.ibroadcast.nowplaying/: addon.xml  default.py  index.html
visualization.ibroadcast.albumart/: CMakeLists.txt  addon.xml  build.sh  index.html  visualization.ibroadcast.albumart.dylib
visualization.ibroadcast.albumart/build_android/: CMakeCache.txt  Makefile  cmake_install.cmake
visualization.ibroadcast.albumart/src/: main.cpp
zips/plugin.audio.ibroadcast/: index.html
zips/plugin.repository.chivancom/: index.html
zips/plugin.repository.ibroadcast/: index.html
zips/plugin.visualization.albumart/: index.html
